# gnome-getting-started-docs

.tx/: config
debian/: changelog  control  control.in  copyright  watch
gnome-help/: Makefile.am  gnome-help.pot
gnome-help/C/: endless-01-desktop.page  endless-02-folders.page  endless-03-programs.page  endless-04-wifi.page  endless-05-files.page  endless-06-browser.page  endless-07-windows.page  endless-08-offline.page  endless-09-writer.page  endless-10-video-player.page  endless-11-photos-and-music.page  endless-12-social-bar.page  endless-13-printers.page  endless-videos.page  getting-started.page  gs-add-new-app.page  gs-add-user-accounts.page  gs-browse-web.page  gs-change-date-time-timezone.page  gs-change-wallpaper.page  gs-connect-online-accounts.page  gs-fix-overscan.page  gs-get-online.page  gs-give-feedback.page  gs-launch-applications.page  gs-set-up-printer.page  gs-switch-tasks.page  gs-use-offline.page  gs-use-system-search.page  gs-use-windows-workspaces.page  gs-where-files.page
gnome-help/ar/: ar.po
gnome-help/as/: as.po
gnome-help/bn/: bn.po
gnome-help/ca/: ca.po
gnome-help/cs/: cs.po
gnome-help/da/: da.po
gnome-help/de/: de.po
gnome-help/el/: el.po
gnome-help/es/: #es.po#  es.po
gnome-help/fi/: fi.po
gnome-help/fil/: fil.po
gnome-help/fr/: fr.po
gnome-help/gl/: gl.po
gnome-help/gu/: gu.po
gnome-help/he/: he.po
gnome-help/hi/: hi.po
gnome-help/hu/: hu.po
gnome-help/id/: id.po
gnome-help/it/: it.po
gnome-help/ja/: ja.po
gnome-help/kn/: kn.po
gnome-help/ko/: ko.po
gnome-help/lv/: lv.po
gnome-help/mr/: mr.po
gnome-help/nl/: nl.po
gnome-help/pa/: pa.po
gnome-help/pl/: pl.po
gnome-help/pt/: pt.po
gnome-help/pt_BR/: pt_BR.po
gnome-help/ro/: ro.po
gnome-help/ru/: ru.po
gnome-help/sk/: sk.po
gnome-help/sv/: sv.po
gnome-help/ta/: ta.po
gnome-help/te/: te.po
gnome-help/th/: th.po
gnome-help/tr/: tr.po
gnome-help/vi/: vi.po
gnome-help/zh/: figures
gnome-help/zh_CN/: zh_CN.po
gnome-help/zh_CN/figures/: endless-04-wifi.webm  endless-05-files.webm  endless-07-windows.webm
gnome-help/zh_HK/: zh_HK.po
gnome-help/zh_TW/: zh_TW.po
