@YELP_HELP_RULES@

HELP_ID = gnome-help

HELP_LINGUAS = as ca cs de el es fr gl gu hu id it ja kn lv mr pa pl pt_BR ru sk ta te

HELP_MEDIA = \
	figures/endless-01-desktop.m4v \
	figures/endless-01-desktop-thumbnail.jpg \
	figures/endless-02-folders.m4v \
	figures/endless-02-folders-thumbnail.jpg \
	figures/endless-03-programs.m4v \
	figures/endless-03-programs-thumbnail.jpg \
	figures/endless-04-wifi.m4v \
	figures/endless-04-wifi-thumbnail.jpg \
	figures/endless-05-files.m4v \
	figures/endless-05-files-thumbnail.jpg \
	figures/endless-06-browser.m4v \
	figures/endless-06-browser-thumbnail.jpg \
	figures/endless-07-windows.m4v \
	figures/endless-07-windows-thumbnail.jpg \
	figures/endless-08-offline.m4v \
	figures/endless-08-offline-thumbnail.jpg \
	figures/endless-09-writer.m4v \
	figures/endless-09-writer-thumbnail.jpg \
	figures/endless-10-video-player.m4v \
	figures/endless-10-video-player-thumbnail.jpg \
	figures/endless-11-photos-and-music.m4v \
	figures/endless-11-photos-and-music-thumbnail.jpg \
	figures/endless-12-social-bar.m4v \
	figures/endless-12-social-bar-thumbnail.jpg \
	figures/endless-13-printers.m4v \
	figures/endless-13-printers-thumbnail.jpg \
	figures/gnome-change-wallpaper.webm \
	figures/gnome-launching-applications.webm \
	figures/gnome-responding-to-messages.webm \
	figures/gnome-task-switching.webm \
	figures/gnome-timezone.webm \
	figures/gnome-windows-and-workspaces.webm

# Please ASK MAINTAINERS first before updating the HELP_FILES list below.
# Keep in mind that some files are missing on purpose.

HELP_FILES = \
	endless-01-desktop.page \
	endless-02-folders.page \
	endless-03-programs.page \
	endless-04-wifi.page \
	endless-05-files.page \
	endless-06-browser.page \
	endless-07-windows.page \
	endless-08-offline.page \
	endless-09-writer.page \
	endless-10-video-player.page \
	endless-11-photos-and-music.page \
	endless-12-social-bar.page \
	endless-13-printers.page \
	endless-videos.page \
	getting-started.page \
	gs-animation.xml \
	gs-browse-web.page \
	gs-browse-web-firefox.page \
	gs-change-date-time-timezone.page \
	gs-change-wallpaper.page \
	gs-connect-online-accounts.page \
	gs-get-online.page \
	gs-goa1.svg \
	gs-goa2.svg \
	gs-goa3.svg \
	gs-goa4.svg \
	gs-goa5.svg \
	gs-go-online1.svg \
	gs-go-online2.svg \
	gs-go-online3.svg \
	gs-launch-applications.page \
	gs-legal.xml \
	gs-search1.svg \
	gs-search2.svg \
	gs-search-settings.svg \
	gs-switch-tasks.page \
	gs-thumb-changing-wallpaper.svg \
	gs-thumb-launching-apps.svg \
	gs-thumb-responding-to-messages.svg \
	gs-thumb-task-switching.svg \
	gs-thumb-timezone.svg \
	gs-thumb-windows-and-workspaces.svg \
	gs-use-system-search.page \
	gs-use-windows-workspaces.page \
	gs-web-browser1-firefox-classic.svg \
	gs-web-browser1-firefox.svg \
	gs-web-browser1.svg \
	gs-web-browser2-firefox.svg \
	gs-web-browser2.svg

