@YELP_HELP_RULES@

HELP_ID = gnome-help

HELP_LINGUAS = as bn ca cs da de el es fi fr gl gu he hi hu id it ja kn ko lv mr nl pa pl pt pt_BR ru sk sv ta te th vi zh_CN zh_HK zh_TW

HELP_MEDIA =

# Please ASK MAINTAINERS first before updating the HELP_FILES list below.
# Keep in mind that some files are missing on purpose.

HELP_FILES = \
	gs-animation.xml \
	gs-browse-web.page \
	gs-fix-overscan.page \
	gs-get-online.page \
	gs-give-feedback.page \
	gs-go-online1.svg \
	gs-go-online2.svg \
	gs-go-online3.svg \
	gs-goa1.svg \
	gs-goa2.svg \
	gs-goa3.svg \
	gs-goa4.svg \
	gs-goa5.svg \
	gs-legal.xml \
	gs-search-settings.svg \
	gs-search1.svg \
	gs-search2.svg \
	gs-thumb-changing-wallpaper.svg \
	gs-thumb-launching-apps.svg \
	gs-thumb-responding-to-messages.svg \
	gs-thumb-task-switching.svg \
	gs-thumb-timezone.svg \
	gs-thumb-windows-and-workspaces.svg \
	gs-use-offline.page \
	gs-use-system-search.page \
	gs-web-browser1-firefox-classic.svg \
	gs-web-browser1-firefox.svg \
	gs-web-browser1.svg \
	gs-web-browser2-firefox.svg \
	gs-web-browser2.svg \
	gs-where-files.page
